--- a/event-registration/src/main/resources/application.properties
+++ b/event-registration/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=event-registration
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventdb
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=your_password
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
