chore: Changes in test cases, MVC structure.

--- a/event-registration/src/main/resources/application.properties
+++ b/event-registration/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=event-registration
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/eventdb
 spring.datasource.username=postgres
-spring.datasource.password=your_password
+spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
